--- a/dada/templates/plugins/bridge/default.tmpl
+++ b/dada/templates/plugins/bridge/default.tmpl
@@ -290,7 +290,7 @@
 													<div class="row">
 														<div class="small-4 columns">
 															<input 
-																type="text" 
+																type="password" 
 																name="discussion_pop_password" 
 																id="discussion_pop_password"
 															>													
