--- a/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
+++ b/dada/installer-disabled/templates/fast_cgi_test_widget.tmpl
@@ -8,7 +8,7 @@
     </div>
 <!-- tmpl_else --> 
     <div class="alert-box info radius"> 
-        <p>FastCGI is Supported!</p>
+        <p>FastCGI is Supported.</p>
     </div> 
 <!-- /tmpl_if --> 
 
