--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1312,7 +1312,7 @@
 					id="configure_deployment" 
 					value="1"
 				>			
-				Configure Deployment Options
+				Configure Deployment Options (EXPERIMENTAL)
 			</label>
 			<div id="deployment_options">
 				<div class="panel"> 
@@ -1321,8 +1321,8 @@
 					</label>
 					<select name="deployment_running_under" id="deployment_running_under"> 
 					<option value="CGI">CGI</option> 
-					<option value="FastCGI">FastCGI</option> 
-					<option value="PSGI">PSGI/Plack</option> 
+					<option value="FastCGI">FastCGI (EXPERIMENTAL)</option> 
+					<option value="PSGI">PSGI/Plack (EXPERIMENTAL)</option> 
 					</select>
 				<!-- tmpl_var cgi_test_FastCGI --> 
 				</div> 
