That's the right variable.

--- a/dada/templates/admin_template.tmpl
+++ b/dada/templates/admin_template.tmpl
@@ -52,7 +52,7 @@
 <script src="<!-- tmpl_var SUPPORT_FILES_URL -->/static/javascripts/dada_mail.js?v=<!-- tmpl_var VER escape=URL -->" type="text/javascript"></script>
 
 <!-- tmpl_if load_wysiwyg_editor --> 
-	<!-- WYSIWYG Editor to load: '<!-- tmpl_var use_wysiwyg_editor -->' -->
+	<!-- WYSIWYG Editor to load: '<!-- tmpl_var list_settings.use_wysiwyg_editor -->' -->
 	<!-- WYSIWYG Editors --> 
 	<!-- tmpl_if using_ckeditor --> 
 		<!-- CKeditor is being used. -->
