--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -409,6 +409,7 @@ $PLUGIN_CONFIGS = {
 	Bounce_Handler => {
 		Connection_Protocol         => <!-- tmpl_var bounce_handler_Connection_Protocol default="'POP3'"-->,
 		Server                      => <!-- tmpl_var bounce_handler_Server default="''"-->,
+		Address                     => <!-- tmpl_var bounce_handler_Address default="''"-->,
 		Username                    => <!-- tmpl_var bounce_handler_Username default="''"-->,
 		Password                    => <!-- tmpl_var bounce_handler_Password default="''"-->,
 		Port                        => <!-- tmpl_var bounce_handler_Port default="AUTO"-->,
