--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -562,7 +562,7 @@
 		Hard Bounces
 	</h3>
 
-	<!-- tmpl_if soft_bounce -->
+	<!-- tmpl_if hard_bounce -->
 		<div class="row">
 			<div class="large-4 medium-4 columns">
 				<div id="hard_bounce_table_loading"></div> 
