normalizing some template weirdness.

--- a/dada/installer-disabled/templates/dada_config.tmpl
+++ b/dada/installer-disabled/templates/dada_config.tmpl
@@ -22,7 +22,7 @@ $RUNNING_UNDER = '<!-- tmpl_var deployment_RUNNING_UNDER default="CGI" -->';
 $ADDITIONAL_PERLLIBS = [	
 <!-- tmpL_loop additional_perllibs -->
 '<!-- tmpl_var name -->',
-<!-- /tmpl_loop>
+<!-- /tmpl_loop -->
 ]; 
 <!-- /tmpl_if -->
 
