--- a/dada/templates/test_sent_notice_widget.tmpl
+++ b/dada/templates/test_sent_notice_widget.tmpl
@@ -1,7 +1,14 @@
 <!-- begin mass_mailing_limit_notice_widget.tmpl --> 
 	<!-- tmpl_if test_sent --> 
         <div data-alert class="alert-box success radius">
-            Test message sent to <strong><!-- tmpl_var test_recipient --></strong> 
+        
+		    Test message sent to:
+				<ul>
+					<!-- tmpl_loop test_recipient_list --> 
+						<li><!-- tmpl_var test_email escape="HTML" --></li>
+					<!-- /tmpl_loop -->
+				</ul>
+			
             <a href="#" class="close">&times;</a>
         </div>
 	<!-- /tmpl_if --> 
