--- a/dada/templates/sending_monitor_container_screen.tmpl
+++ b/dada/templates/sending_monitor_container_screen.tmpl
@@ -12,6 +12,7 @@
 	<input type="hidden" id="s_program_url" name="s_program_url" value="<!-- tmpl_var S_PROGRAM_URL -->" > 
 	<input type="hidden" name="message_id"           id="message_id"           value="<!-- tmpl_var message_id -->" > 
 	<input type="hidden" name="message_type"         id="message_type"         value="<!-- tmpl_var message_type -->" > 
+	<input type="hidden" name="draft_id"             id="draft_id"             value="<!-- tmpl_var draft_id -->" > 
 	<input type="hidden" name="target_id"            id="target_id"            value="sending_monitor_interface" >
 	<input type="hidden" name="show_tracker"         id="show_tracker"         value="<!-- tmpl_var list_settings.tracker_show_message_reports_in_mailing_monitor -->" >  	
 	<input type="hidden" name="refresh_after"        id="refresh_after"        value="<!-- tmpl_var refresh_after -->" > 
