--- a/dada/templates/view_list_viewport_widget.tmpl
+++ b/dada/templates/view_list_viewport_widget.tmpl
@@ -77,7 +77,7 @@
             <p>
              There are currently no members of <!-- tmpl_var type_title -->.
 			 
-                <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'ignore_bounces_list'))" -->
+                <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'test_list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'ignore_bounces_list'))" -->
         
                     <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=add&amp;type=<!-- tmpl_var type -->">
                         <!-- tmpl_if EXPR="(type eq 'list')" -->
@@ -138,7 +138,7 @@
             <!-- tmpl_var num_subscribers --> 
        </strong>
 
-        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'ignore_bounces_list'))" -->
+        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'test_list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'ignore_bounces_list'))" -->
             <a href="<!-- tmpl_var S_PROGRAM_URL -->?flavor=add&amp;type=<!-- tmpl_var type -->">
                     <!-- tmpl_if EXPR="(type eq 'list')" -->
                         Invite
@@ -175,7 +175,7 @@
         <div class="small-11 columns">
             <ul class="button-group">
                 
-     		 <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'ignore_bounces_list')  || (type eq 'sub_confirm_list'))" -->
+     		 <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'test_list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list') || (type eq 'ignore_bounces_list')  || (type eq 'sub_confirm_list'))" -->
 
              <input type="hidden" name="process" value="delete" >
              <input type="hidden" name="flavor"       value="remove_subscribers" >
@@ -239,7 +239,7 @@
     
         </form>
 		
-        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list')  || (type eq 'ignore_bounces_list') || (type eq 'sub_confirm_list'))" -->
+        <!-- tmpl_if EXPR="((type eq 'list') || (type eq 'test_list') || (type eq 'black_list') || (type eq 'authorized_senders') || (type eq 'moderators') || (type eq 'white_list')  || (type eq 'ignore_bounces_list') || (type eq 'sub_confirm_list'))" -->
         
             <!-- tmpl_unless query -->
 			    <li>
